kustomize/overlays/homecloud/infrastructure/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  namespace: keycloak
  name: keycloak-ingress
  labels:
    app: keycloak
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: keycloak
      port:
        number: 80
  tls:
    - hosts:
        - keycloak
